Bug 152235 - FILESAVE PDF PAC tool reports "Text object not tagged" error with PDF watermark
Summary: FILESAVE PDF PAC tool reports "Text object not tagged" error with PDF watermark
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2022-11-26 13:27 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-04 13:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file to be signed with PDF watermark (36.73 KB, application/vnd.oasis.opendocument.text)
2022-11-26 13:27 UTC, Gabor Kelemen (Collabora)
Details
The example file exported to PDF with watermark added in the PDF export dialog (63.29 KB, application/pdf)
2022-11-26 13:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-11-26 13:27:12 UTC
Created attachment 183808 [details]
Example file to be signed with PDF watermark

When the attached file is exported to PDF with PDF/UA enabled, and the "Sign with watermark" option enabled and the file is checked in the PAC tool, the reported error is "Text object not tagged".

1, Open attached file
2, Export it as PDF, with enabled "Sign with watermark" (I filled the field with "PDF watermark" and PDF/UA option
3, Check with the PAC tool: https://pdfua.foundation/en/pdf-accessibility-checker-pac

PAC would report the error on the attached screenshot.

VeraPDF https://demo.verapdf.org/ with PDF/UA setting on the second page, reports:

Validation information
Rule	Status
Specification: ISO 14289-1:2014, Clause: 7.1, Test number: 3	
Content shall be marked as Artifact or tagged as real content	Failed
13 occurrences 	Hide
SESimpleContentItem	
parentStructureTag != null || parentsTags.split('&').filter(elem => elem == 'Artifact').length > 0	
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[0]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[1]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[2]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[3]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[4]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[5]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[6]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[7]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[8]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[9]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[10]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[11]
root/document[0]/pages[0](1 0 obj PDPage)/contentStream[0](2 0 obj PDSemanticContentStream)/operators[248]/xObject[0]/contentStream[0](17 0 obj PDSemanticContentStream)/content[0]/contentItem[12]

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3b0b9fcb80242abcedc01eb388a57b1016916353
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2022-11-26 13:28:08 UTC
Created attachment 183809 [details]
The example file exported to PDF with watermark added in the PDF export dialog
Comment 2 Buovjaga 2023-03-08 08:14:51 UTC
Repro

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a179f6c91692076e7e17babf4890638caa398384
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-07-04 12:16:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dd4ce9b2fc7feaf288055b24b5bc4842c0d2b4de

tdf#152235 filter,vcl: PDF/UA export: tag watermark as Artifact

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2023-07-04 12:19:06 UTC
fixed on master
Comment 5 Commit Notification 2023-07-04 13:21:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f3e4a5450cdf602c3ed176c4f66c8845482fff97

tdf#152235 filter,vcl: PDF/UA export: tag watermark as Artifact

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.