tdf#152235 filter,vcl: PDF/UA export: tag watermark as Artifact

Change-Id: I64e57a832678be935b69a5cea328cc252a4bf29d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153951
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit dd4ce9b2fc7feaf288055b24b5bc4842c0d2b4de)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153927